--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,62 @@
     <title>Vite Template</title>
   </head>
   <body>
+    <header class="header">
+      <div class="menu-container" id="menu">
+        <p class="menu__icon--left" id="icon-left">></p>
+        <ul class="menu__list" id="menu-list">
+          <li class="menu__item">
+            <a href="" class="link link--elara"><span>about</span></a>
+          </li>
+          <li class="menu__item">
+            <a href="" class="link link--elara"><span>projects</span></a>
+          </li>
+          <li class="menu__item">
+            <a href="" class="link link--elara"><span>contact</span></a>
+          </li>
+        </ul>
+        <p class="menu__icon--right" id="icon-right">&lt;</p>
+      </div>
+
+      <h1 class="title__intro">Hello! <span>I´m Mer</span></h1>
+      <h2 class="subtitle__intro">web | design | programming</h2>
+    </header>
+
+    <section>
+      <div class="about-me">
+        <h1 class="presentation__title">about me:</h1>
+        <div class="presentation-info__container">
+          <img
+            class="presentation__photo"
+            src="https://i.pinimg.com/736x/a1/8e/37/a18e3748d8f55018ff25a514f8741ed7.jpg"
+            alt=""
+            id="presentation-photo"
+          />
+          <p id="presentation-text" class="presentation__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sed
+            officiis, expedita odit accusamus atque quae nulla excepturi
+            eligendi, sint officia! Ea cupiditate a adipisci impedit mollitia,
+            deserunt facere Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Consequuntur in, assumenda minima perferendis itaque facere
+            Lorem ipsum dolor sit amet consectetur
+          </p>
+        </div>
+        <div class="skills-container">
+          <i class="fa-brands fa-html5 skill__icon"></i>
+          <i class="fa-brands fa-css3-alt skill__icon"></i>
+          <i class="fa-brands fa-square-js skill__icon"></i>
+          <i class="fa-brands fa-sass skill__icon"></i>
+          <i class="fa-brands fa-react skill__icon"></i>
+          <i class="fa-brands fa-git skill__icon"></i>
+          <i class="fa-brands fa-github skill__icon"></i>
+          <i class="fa-brands fa-figma skill__icon"></i>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://kit.fontawesome.com/c655cb89ec.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
